2012-06-19  Kai Tietz  <ktietz@redhat.com>

	* math/ilogb.S: Replace x64 variant by soft-float variant.
	* math/ilogbf.S: Likewise.
	* math/logb.c: Likewise.
	* math/logbf.c: Likewise.
	* math/isnan.c: Special-case for x64.
	* math/isnanf.c: Likewise.
	* math/signbit.c: Likewise.
	* math/signbitf.c: Likewise.

	* math/fpclassify.c: Special-case x64.
	* math/fpclassifyf.c: Likewise.

2012-06-06  Ozkan Sezer  <sezeroz@gmail.com>

	* lib32/winhttp.def (WinHttpCheckPlatform): Add missing @0
	__stdcall suffix.

2012-06-05  Kai Tietz  <ktietz@redhat.com>

	* lib32/winhttp.def: New file.
	* lib64/winhttp.def: New file.

2012-05-26  Kai Tietz  <ktietz@redhat.com>

	* math/floor*: Optimize for 64-bit without using fpu.
	* Makefile.am: Adjust floor and floorf sources.
	* Makefile.in: Regenerated.
	* lib32/ and lib64/: Adjust msvcr*.def files for providing
	floor and floorf only as DATA.

	* math/ceilf.c: Replaced by new implementation in ...
	* math/ceilf.S: here.

	* math/trunc*: Optimize for 64-bit without using fpu.
	* Makefile.am: Adjust trunc and truncf source.
	* Makefile.in: Regenerate.

2012-05-23  Kai Tietz  <ktietz@redhat.com>

	* lib32/msvcr*.def: Define log/logf imports as DATA.
	* lib64/msvcr*.def: Likewise.

	* lib32/msvcr*.def: Make exp/expf functions defined as DATA.
	* lib64/msvcr*.def: Likewise.

	* lib32/msvcr*.def: Make sqrt/sqrtf functions defined as DATA.
	* lib64/msvcr*.def: Likewise.

	* math/ceilf.S: Removed.
	* math/ceil.S: New code.
	* Makefile.am: Added ceil.S to build.
	* Makefile.in: Regenerated.
	* lib32/msvcr*.def: Mark ceilf and ceil as DATA.
	* lib64/msvcr*.def: Likewise.

2012-05-23  Ozkan Sezer  <sezeroz@gmail.com>

	* lib32/cabinet.def: New def, based on a patch by Ray Donnelly.
	* Makefile.am (lib32_DATA): Add lib32/cabinet.def to build.
	* Makefile.in: Regenerate.

2012-05-22  Kai Tietz  <ktietz@redhat.com>

	* crt/crtexe.c (__mingw_winmain_hInstance): Initialize for
	console-mode, too.

2012-05-02  Kai Tietz  <ktietz@redhat.com>
